# AITradingCrew

./: .gitignore  LICENSE  README.md  pyproject.toml
ai_trading_crew/: config.py  crew.py  main.py  market_overview_agents.py  stock_processor.py
ai_trading_crew/analysts/: fundamental_analysis.py  market_overview.py  social.py  stock_articles_fetcher.py  stock_headlines_fetcher.py  technical_indicators.py  timegpt.py
ai_trading_crew/config/: agents.yaml  agents_article.yaml  agents_day_trader.yaml  tasks.yaml  tasks_article.yaml  tasks_day_trader.yaml
ai_trading_crew/utils/: __init__.py  checks.py  company_info.py  dates.py  twelve_data_manager.py
