[project]
name = "ai_trading_crew"
version = "0.1.0"
description = "ai-trading-crew using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "onnxruntime==1.17.0",
    "numpy<2",
    "yfinance>=0.2.54",
    "pandas-market-calendars>=4.6.1",
    "nixtla>=0.6.6",
    "matplotlib>=3.10.1",
    "ta-lib>=0.6.3",
    "linkup-sdk>=0.2.4",
    "crawl4ai>=0.6.3",
]

[project.scripts]
ai_trading_crew = "ai_trading_crew.main:run"
run_crew = "ai_trading_crew.main:run"
train = "ai_trading_crew.main:train"
replay = "ai_trading_crew.main:replay"
test = "ai_trading_crew.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"